<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/large_boarder"
            android:fontFamily="@font/amatic"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold" />
        <!--Question #1 - RADIO BUTTON -->
        <LinearLayout style="@style/main_section">

            <TextView
                style="@style/question"
                android:text="@string/question1" />

            <RadioGroup style="@style/sub_section">

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/q1_ans1" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/q1_ans2" />

                <RadioButton
                    android:id="@+id/q1_ans3"
                    style="@style/radio_button"
                    android:text="@string/q1_ans3" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/q1_ans4" />

            </RadioGroup>

        </LinearLayout>
        <!--Question #2 - RADIO BUTTON -->
        <LinearLayout style="@style/main_section">

            <TextView
                style="@style/question"
                android:text="@string/question2" />

            <RadioGroup style="@style/sub_section">

                <RadioButton
                    android:id="@+id/q2_ans1"
                    style="@style/radio_button"
                    android:text="@string/q2_ans1" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/q2_ans2" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/q2_ans3" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/q2_ans4" />

            </RadioGroup>

        </LinearLayout>
        <!--Question #3 - CHECKBOX -->
        <LinearLayout style="@style/main_section">

            <TextView
                style="@style/question"
                android:text="@string/question3" />

            <LinearLayout style="@style/sub_section">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/q3_ans1"
                        style="@style/checkbox"
                        android:text="@string/q3_ans1" />

                    <CheckBox
                        android:id="@+id/q3_ans2"
                        style="@style/checkbox"
                        android:text="@string/q3_ans2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/q3_ans3"
                        style="@style/checkbox"
                        android:text="@string/q3_ans3" />

                    <CheckBox
                        android:id="@+id/q3_ans4"
                        style="@style/checkbox"
                        android:text="@string/q3_ans4" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <!--Question #4 - EditText -->
        <LinearLayout style="@style/main_section">

            <TextView
                style="@style/question"
                android:layout_marginBottom="8dp"
                android:text="@string/question4" />

            <EditText
                android:id="@+id/q4_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_red"
                android:hint="@string/hint1"
                android:inputType="number"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/dark_red"
            android:onClick="submit"
            android:text="@string/all_done"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>